--- a/foodmonster/XiB/RecipeDetails/StepOfRecipeTableViewCell.xib
+++ b/foodmonster/XiB/RecipeDetails/StepOfRecipeTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -54,6 +54,7 @@
                 <outlet property="spinnerView" destination="GHG-2b-aMt" id="kl9-RE-amA"/>
                 <outlet property="stepDescriptionLabel" destination="mQe-r3-sor" id="DjS-CX-MaE"/>
                 <outlet property="stepImage" destination="Tzc-p5-OYM" id="aTr-Fi-Q2o"/>
+                <outlet property="stepImageHeighConstraint" destination="2Tj-uN-sF4" id="t7L-bL-Vm0"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="-107.8125"/>
         </view>
