--- a/foodmonster/XiB/NewRecipe/CookStepTableViewCell.xib
+++ b/foodmonster/XiB/NewRecipe/CookStepTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -71,6 +71,8 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="containerView" destination="Raf-4j-mMD" id="QH9-WV-LDK"/>
+                <outlet property="cookImageHeightConstraint" destination="h03-Ud-Gdy" id="gcm-c1-bqn"/>
+                <outlet property="imageHeightConstraint" destination="Vab-5F-f9i" id="RhQ-Zs-gTg"/>
                 <outlet property="stepImageView" destination="SEJ-e4-QHv" id="nyj-o4-XIX"/>
                 <outlet property="stepLabel" destination="StK-O5-cYh" id="qnU-lp-rka"/>
             </connections>
